[tool.poetry]
name = "test-agent-doc"
version = "0.1.0"
description = ""
authors = ["Chandrika Sivaramakrishnan <chandrika@pnnl.gov>"]
readme = "README.md"
packages = [{include = "test_agent_doc"}]

[tool.poetry.dependencies]
python = "^3.8"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.group.dev.dependencies]
Sphinx = ">=1.6,<6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
